Add resource Post and make restricted without authentication

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -1,5 +1,6 @@
 <h2>Dashboard</h2>
 
-<p>Peter Parker is Spider-Man</p>
+<p>{{session}}</p>
 
 <a href="#" {{action 'logout'}}>Logout</a>
+{{#link-to 'posts'}}Posts{{/link-to}}
